--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,19 @@
+a {
+    text-decoration: none;
+}
+
+#side-menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+#side-menu li {
+    padding: 8px 0;
+}
+
+#side-menu a {
+    color:#303030;
+}
 
 #side-menu li > img {
     width: 30px;
