--- a/css/default.css
+++ b/css/default.css
@@ -2,6 +2,12 @@ a {
     text-decoration: none;
 }
 
+#side-menu {
+    padding: 20px;
+    border-right: 1px solid #e0e0e0;
+    height: 100%;
+}
+
 #side-menu ul {
     list-style: none;
     padding: 0;
