--- a/css/default.css
+++ b/css/default.css
@@ -39,3 +39,18 @@ a {
 .tweet-body {
     padding: 5px;
 }
+
+.tweet-nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+.tweet-nav li {
+    width: 100px;
+    /* margin-right: 100px; */
+}
+
+.tweet-nav li img {
+    width: 14px;
+    height: 14px;
+}
